log/build_2022-05-13_08-30-47/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/utils/mtdevice.py", line 109
    if (time.time()-start) > 0.1
                               ^
SyntaxError: invalid syntax

